# seaborn_objects_recipes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.binder/: postBuild  requirements.txt
.github/workflows/: actions.yml  docs.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.md
docs/source/api/: index.rst
docs/source/examples/: GALLERY_HEADER.md  plot_line_label.py  plot_lowess.py  plot_polyfit_ci.py  plot_rolling.py
docs/tutorial/: recipes_tut.ipynb
docs/tutorial/auto_examples/: plot_line_label.ipynb  plot_lowess.ipynb  plot_polyfit_ci.ipynb  plot_rolling.ipynb  recipes_tut.ipynb
seaborn_objects_recipes/: __init__.py
seaborn_objects_recipes/recipes/: line_label.py  lowess.py  plotting.py
tests/: test_line_label_regression.py  test_lowess.py  test_main.py  test_polyfitci.py
