[tool.poetry]
name = "seaborn_objects_recipes"
version = "0.2.4"
packages = [{ include = "seaborn_objects_recipes" }]
description = "A collection of recipes that can be used together with the seaborn library to create custom plots."
authors = ["Ofosu Osei <goofosuosei@gmail.com>",
          "Nick Eubank <nick@nickeubank.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://oosei25.github.io/seaborn_objects_recipes/index.html"
repository = "https://github.com/oosei25/seaborn_objects_recipes"
keywords = ["seaborn", "seaborn.objects", "lowess", "statsmodels", "visualization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Visualization",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["dist", "build", "docs", "img", ".venv"]

[tool.black]
extend-exclude = "^(dist|build|docs|img|.venv)/"

[tool.isort]
profile = "black"
skip = ["dist", "build", "docs", "img", ".venv"]

[tool.poetry.dependencies]
python = ">=3.10"
seaborn = ">=0.13"
statsmodels = ">=0.14.1"
pandas = ">=1.5"
numpy = ">=1.22"
matplotlib = ">=3.7"
scipy = ">=1.9,<2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
